force-app/main/default/objects/gmpkg__xDataGrid_Settings__c/gmpkg__xDataGrid_Settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>DataGrid Settings</label>
</CustomObject>