force-app/main/default/objects/gmpkg__xDataGrid_Settings__c/fields/gmpkg__xApplySave_ExplorerGroupBy__c.field-meta.xml
<CustomField>
    <fullName>gmpkg__xApplySave_ExplorerGroupBy__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check this option to have Apply and Apply&amp;Save when applying a grouping from the Grid Explorer</inlineHelpText>
    <label>Apply&amp;Save Explorer GroupBy</label>
    <type>Checkbox</type>
</CustomField>