force-app/main/default/objects/gmpkg__xDataGrid_Settings__c/fields/gmpkg__xAuto_Adjust_Columns__c.field-meta.xml
<CustomField>
    <fullName>gmpkg__xAuto_Adjust_Columns__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check this option to auto adjust the width of the columns</inlineHelpText>
    <label>Auto Adjust Columns</label>
    <type>Checkbox</type>
</CustomField>