force-app/main/default/objects/gmpkg__xDataGrid_Settings__c/fields/gmpkg__xByPass_OwnerCheck__c.field-meta.xml
<CustomField>
    <fullName>gmpkg__xByPass_OwnerCheck__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ByPass Owner Check</label>
    <type>Checkbox</type>
</CustomField>