force-app/main/default/objects/gmpkg__xDataGrid_Settings__c/fields/gmpkg__xCSV_Separator__c.field-meta.xml
<CustomField>
    <fullName>gmpkg__xCSV_Separator__c</fullName>
    <defaultValue>&apos;,&apos;</defaultValue>
    <inlineHelpText>Column separator when exporting to CSV file it could be  &apos;,&apos; or &apos;;&apos;</inlineHelpText>
    <label>CSV Separator</label>
    <length>1</length>
    <type>Text</type>
</CustomField>