force-app/main/default/objects/gmpkg__xDataGrid_Settings__c/fields/gmpkg__xDisable_Copy__c.field-meta.xml
<CustomField>
    <fullName>gmpkg__xDisable_Copy__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Disable copy of any grid</inlineHelpText>
    <label>Disable Copy</label>
    <type>Checkbox</type>
</CustomField>