force-app/main/default/objects/gmpkg__xDataGrid_Settings__c/fields/gmpkg__xDisable_Export__c.field-meta.xml
<CustomField>
    <fullName>gmpkg__xDisable_Export__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Disable the export of the grid</inlineHelpText>
    <label>Disable Export</label>
    <type>Checkbox</type>
</CustomField>