force-app/main/default/objects/gmpkg__xDataGrid_Settings__c/fields/gmpkg__xDisable_Import__c.field-meta.xml
<CustomField>
    <fullName>gmpkg__xDisable_Import__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Disable the import from the grid</inlineHelpText>
    <label>Disable Import</label>
    <type>Checkbox</type>
</CustomField>