force-app/main/default/objects/gmpkg__xDataGrid_Settings__c/fields/gmpkg__xDisable_RowNumbering__c.field-meta.xml
<CustomField>
    <fullName>gmpkg__xDisable_RowNumbering__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Disable the row numbering on the grid. When checked, row # column is hidden</inlineHelpText>
    <label>Hide Row #</label>
    <type>Checkbox</type>
</CustomField>