force-app/main/default/objects/gmpkg__xDataGrid_Settings__c/fields/gmpkg__xEnable_ClickToDial__c.field-meta.xml
<CustomField>
    <fullName>gmpkg__xEnable_ClickToDial__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check this option to enable click to dial. This option should be activated only if a Dialer is configured for the logged user.</inlineHelpText>
    <label>Enable Click To Dial</label>
    <type>Checkbox</type>
</CustomField>