force-app/main/default/objects/gmpkg__xDataGrid_Settings__c/fields/gmpkg__xEnable_Grid_Security__c.field-meta.xml
<CustomField>
    <fullName>gmpkg__xEnable_Grid_Security__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Enable Grid Security</label>
    <type>Checkbox</type>
</CustomField>