force-app/main/default/objects/gmpkg__xDataGrid_Settings__c/fields/gmpkg__xEnable_PreferenceTemplate__c.field-meta.xml
<CustomField>
    <fullName>gmpkg__xEnable_PreferenceTemplate__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check this option to enable templates on the Grid Explorer</inlineHelpText>
    <label>Enable Grid Template</label>
    <type>Checkbox</type>
</CustomField>