force-app/main/default/objects/gmpkg__xDataGrid_Settings__c/fields/gmpkg__xEnable_UserGrid_AutoFill__c.field-meta.xml
<CustomField>
    <fullName>gmpkg__xEnable_UserGrid_AutoFill__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Enable UserGrid AutoFill</label>
    <type>Checkbox</type>
</CustomField>