force-app/main/default/objects/gmpkg__xDataGrid_Settings__c/fields/gmpkg__xEnable_UserGrid_CellEdit__c.field-meta.xml
<CustomField>
    <fullName>gmpkg__xEnable_UserGrid_CellEdit__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check this option to enable cell edit for User Grids</inlineHelpText>
    <label>Enable UserGrid Cell Edit</label>
    <type>Checkbox</type>
</CustomField>