force-app/main/default/objects/gmpkg__xDataGrid_Settings__c/fields/gmpkg__xEnable_UserGrid_Filter__c.field-meta.xml
<CustomField>
    <fullName>gmpkg__xEnable_UserGrid_Filter__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check this option to enable End User Filters for the User Grids</inlineHelpText>
    <label>Enable UserGrid Filter</label>
    <type>Checkbox</type>
</CustomField>