force-app/main/default/objects/gmpkg__xDataGrid_Settings__c/fields/gmpkg__xEnable_UserGrid_Interactive_Filter__c.field-meta.xml
<CustomField>
    <fullName>gmpkg__xEnable_UserGrid_Interactive_Filter__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Enable Interactive Filters for User Grids.</description>
    <inlineHelpText>Check this option to enable Interactive Filters for User Grids</inlineHelpText>
    <label>Enable UserGrid Interactive Filter</label>
    <type>Checkbox</type>
</CustomField>