force-app/main/default/objects/gmpkg__xDataGrid_Settings__c/fields/gmpkg__xEnable_UserGrid_Pagination__c.field-meta.xml
<CustomField>
    <fullName>gmpkg__xEnable_UserGrid_Pagination__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check this option to enable pagination instead of scrolling for the User Grids.</inlineHelpText>
    <label>Enable UserGrid Pagination</label>
    <type>Checkbox</type>
</CustomField>