force-app/main/default/objects/gmpkg__xDataGrid_Settings__c/fields/gmpkg__xEnable_UserGrid_ParentField_Editing__c.field-meta.xml
<CustomField>
    <fullName>gmpkg__xEnable_UserGrid_ParentField_Editing__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check this option to enable Parent Field Editing for User Grids</inlineHelpText>
    <label>Enable UserGrid Parent Field Editing</label>
    <type>Checkbox</type>
</CustomField>