force-app/main/default/objects/gmpkg__xDataGrid_Settings__c/fields/gmpkg__xEnhanced_FilterBuilder__c.field-meta.xml
<CustomField>
    <fullName>gmpkg__xEnhanced_FilterBuilder__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check this option to use Enhanced Filter Builder. With Enhanced Filter Builder, you can easily create complex logic.</inlineHelpText>
    <label>Enhanced Filter Builder</label>
    <type>Checkbox</type>
</CustomField>