force-app/main/default/objects/gmpkg__xDataGrid_Settings__c/fields/gmpkg__xExport_Date_Format__c.field-meta.xml
<CustomField>
    <fullName>gmpkg__xExport_Date_Format__c</fullName>
    <inlineHelpText>Export Date Format. Use $Locale.dateFormat to use User Settings</inlineHelpText>
    <label>Export Date Format</label>
    <length>80</length>
    <type>Text</type>
</CustomField>