force-app/main/default/objects/gmpkg__xDataGrid_Settings__c/fields/gmpkg__xExport_Datetime_Format__c.field-meta.xml
<CustomField>
    <fullName>gmpkg__xExport_Datetime_Format__c</fullName>
    <inlineHelpText>Export Datetime Format. Use $Locale.datetimeFormat to use User Settings</inlineHelpText>
    <label>Export Datetime Format</label>
    <length>80</length>
    <type>Text</type>
</CustomField>