force-app/main/default/objects/gmpkg__xDataGrid_Settings__c/fields/gmpkg__xExport_PickListAsLabel__c.field-meta.xml
<CustomField>
    <fullName>gmpkg__xExport_PickListAsLabel__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check this option to export PickList fields as Labels instead of API names.</inlineHelpText>
    <label>Export PickList as Label</label>
    <type>Checkbox</type>
</CustomField>