force-app/main/default/objects/gmpkg__xDataGrid_Settings__c/fields/gmpkg__xInMemFilterPolicy__c.field-meta.xml
<CustomField>
    <fullName>gmpkg__xInMemFilterPolicy__c</fullName>
    <defaultValue>&apos;ALL_URLS&apos;</defaultValue>
    <description>Policy for applying interactive filters: 
 - ALL_URLS (persist across all pages), 
 - BY_URL (persist by URL)
 - NEVER (no persistence).</description>
    <inlineHelpText>Choose how interactive filters should be applied: 
 - ALL_URLS (persist across all pages), 
 - BY_URL (persist by URL)
 - NEVER (no persistence)</inlineHelpText>
    <label>Interactive Filter Policy</label>
    <length>80</length>
    <type>Text</type>
</CustomField>