force-app/main/default/objects/gmpkg__xDataGrid_Settings__c/fields/gmpkg__xMute_EndUser_Filter__c.field-meta.xml
<CustomField>
    <fullName>gmpkg__xMute_EndUser_Filter__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check this option to mute EndUser Filter maintenance. When checked, the user will not be able to create/edit/delete EndUser Filters</inlineHelpText>
    <label>Mute EndUser Filter</label>
    <type>Checkbox</type>
</CustomField>