force-app/main/default/objects/gmpkg__xDataGrid_Settings__c/fields/gmpkg__xMute_Filter_Link__c.field-meta.xml
<CustomField>
    <fullName>gmpkg__xMute_Filter_Link__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check this option to prevent the user from creating filter link</inlineHelpText>
    <label>Mute Filter Link</label>
    <type>Checkbox</type>
</CustomField>