force-app/main/default/objects/gmpkg__xDataGrid_Settings__c/fields/gmpkg__xViewAll_Page_Size__c.field-meta.xml
<CustomField>
    <fullName>gmpkg__xViewAll_Page_Size__c</fullName>
    <defaultValue>50</defaultValue>
    <inlineHelpText>Page size when ViewAll link is clicked</inlineHelpText>
    <label>ViewAll Page Size</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>